[gd_scene load_steps=4 format=2]

[ext_resource path="res://Ressources/Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 2 )

[node name="Play" type="Button" parent="."]
anchor_left = 0.361
anchor_top = 0.306
anchor_right = 0.639
anchor_bottom = 0.361
margin_left = 3.44354
margin_top = 0.019989
margin_right = 3.68347
margin_bottom = -0.380035
focus_neighbour_top = NodePath("../Quit")
text = "Play"

[node name="Option" type="Button" parent="."]
anchor_left = 0.363
anchor_top = 0.417
anchor_right = 0.641
anchor_bottom = 0.472
margin_top = 0.139984
margin_bottom = -0.26004
text = "Option"

[node name="Credits" type="Button" parent="."]
anchor_left = 0.363
anchor_top = 0.528
anchor_right = 0.641
anchor_bottom = 0.583
margin_bottom = -0.140015
text = "Credits"

[node name="Quit" type="Button" parent="."]
anchor_left = 0.363
anchor_top = 0.639
anchor_right = 0.641
anchor_bottom = 0.694
margin_top = 0.379944
margin_bottom = -0.0200195
focus_neighbour_bottom = NodePath("../Play")
focus_next = NodePath("../Play")
text = "LEAVE"

[connection signal="pressed" from="Play" to="." method="_on_PlayEndLess_pressed"]
[connection signal="pressed" from="Option" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
